# metron

./: Cargo.toml  README.md  README.org  justfile  rustfmt.toml
_old/: Cargo.toml
_old/src/: lib.rs
_old/src/cli/: node.rs
_old/src/profile/: report.rs
agent/: Cargo.toml
agent/src/: lib.rs
all-in-one/: Cargo.toml
all-in-one/src/: config.rs  main.rs  runtime.rs
all-in-one/src/cli/: control.rs  parser.rs  profile.rs
cli/: Cargo.toml
cli/src/: agent.rs  control.rs  controller.rs  lib.rs  main.rs  parser.rs  root.rs  run.rs  runner.rs  test.rs
control-plane/: Cargo.toml
controller/: Cargo.toml
core/src/: lib.rs  profiler.rs
crates/metron/: Cargo.toml
crates/metron/src/: config.rs  main.rs
crates/metron/src/cli/: mod.rs  root.rs
crates/metron/src/echo/: config.rs
crates/metron/src/newcli/: mod.rs
crates/operator/: Cargo.toml
docs/: architecture.org  style-guide.org
echo/: Cargo.toml
echo/src/: config.rs  lib.rs
examples/: config.yaml  load-test.yaml  run.yaml  scenarios.yaml
grpc/: Cargo.toml  build.rs
grpc/proto/: metron.proto
grpc/src/: agent.rs  lib.rs  server.rs
infra/: Cargo.toml
metron/: Cargo.toml
metron/src/: balance.rs  config.rs  controller.rs  driver.rs  lib.rs  main.rs  runner.rs
metron/src/config/: controller.rs  driver.rs  mod.rs  plan.rs  telemetry.rs
metron/src/core/: agent.rs  agent_old.rs  controller.rs  mod.rs  plan.rs  runner.rs  wait.rs
metron_old/: Cargo.toml
metron_old/src/: config.rs
metron_old/src/cli/: control.rs  echo.rs  node.rs  operator.rs  parser.rs  profile.rs
metron_old/src/operator/: config.rs
metron_old/src/profile/: config.rs  plan.rs  signaller.rs
old/: Cargo.toml
old/src/echo/: mod.rs
old/src/profile/: profiler.rs
proto/: Cargo.toml  build.rs
proto/src/: agent.proto  lib.rs
src/: args.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  load.rs  main.rs  plan.rs  runtime.rs  schedule.rs  server.rs  signal.rs  signaller.rs  test.rs
src/cli/: echo.rs  load.rs  mod.rs  operator.rs  parse.rs  profile.rs  root.rs  server.rs  validate.rs
src/config/: mod.rs
src/control/: config.rs
src/echo/: config.rs  mod.rs  prom.rs
src/load/: client.rs  config.rs  mod.rs  plan.rs  signaller.rs
src/profile/: client.rs  config.rs  metrics.rs  mod.rs  plan.rs  profiler.rs  report.rs  signaller.rs
src/server/: config.rs  mod.rs
tests/: cli.rs
