[package]
name = "metron"
authors = ["Ashlin Eldridge"]
description = "Performance characterization tool"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
# TODO: Not sure if I need the headers feature...
axum = { version = "0.6.19", features = ["headers"] }
clap = { version = "4.3.19", features = ["cargo", "derive"] }
either = "1.9.0"
env_logger = "0.10.0"
hdrhistogram = "7.5.2"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.19"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
num_cpus = "1.16.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.25"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.12"
