[package]
name = "cli"
version = "0.1.0"
authors = ["Ashlin Eldridge <ashlin.eldridge@gmail.com>"]
edition = "2021"

[[bin]]
name = "metron"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["cargo"]}
either = "1.9.0"
grpc = { path = "../grpc" }
humantime = "2.1.0"
metron = { path = "../metron" }
thiserror = "1.0.50"
tokio = { version = "1.31.0", features = ["full"] }
url = "2.4.1"
