[package]
name = "cli"
version = "0.1.0"
authors = ["Ashlin Eldridge <ashlin.eldridge@gmail.com>"]
edition = "2021"

[[bin]]
name = "metron"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["cargo"]}
console-subscriber = "0.2.0"
either = "1.9.0"
grpc = { path = "../grpc" }
humantime = "2.1.0"
metron = { path = "../metron" }
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.50"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
