[package]
name = "cli"
version = "0.1.0"
authors = ["Ashlin Eldridge <ashlin.eldridge@gmail.com>"]
edition = "2021"

# [[bin]]
# name = "metron"
# path = "src/main.rs"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["cargo"]}
console-subscriber = "0.4.0"
either = "1.13.0"
grpc = { path = "../grpc" }
humantime = "2.1.0"
lazy_static = "1.5.0"
metron = { path = "../metron" }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
