[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
async-trait = "0.1.73"
metron = { path = "../metron" }
prost = "0.11.9"
prost-types = "0.11.9"
thiserror = "1.0.50"
tokio = "1.33.0"
tokio-stream = "0.1.14"
tonic = "0.9.2"
tower = "0.4.13"
url = "2.5.0"

[build-dependencies]
tonic-build = "0.9.2"
