[package]
name = "metron"
version = "0.1.0"
edition = "2021"

# TODO: Some of these dependencies/features can be removed.
[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
humantime-serde = "1.1.1"
num_cpus = "1.16.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.27"
thiserror = "1.0.48"
tokio = { version = "1.33.0", features = ["rt"] }
tower = { version = "0.4.13", features = ["balance"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
url = { version = "2.4.1", features = ["serde"] }
