[package]
name = "metron"
version = "0.1.0"
edition = "2021"

# TODO: Some of these dependencies/features can be removed.
[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
futures-core = "0.3.29"
humantime-serde = "1.1.1"
hyper = { version = "1.0.1", features = ["full"] }
hyper-tls = "0.5.0"
hyper-util = { version = "0.1.0", features = ["tokio"] }
num_cpus = "1.16.0"
pin-project = "1.1.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.27"
thiserror = "1.0.48"
tokio = { version = "1.33.0", features = ["rt"] }
tower = { version = "0.4.13", features = ["balance"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
url = { version = "2.4.1", features = ["serde"] }
